--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../src/styles/shopper.css">
+    <link rel="stylesheet" href="/shopper.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link href="https://fonts.cdnfonts.com/css/roboto" rel="stylesheet">
-    <link href="../public/images/favicon.ico" rel="shortcut icon">
+    <link href="/favicon.ico" rel="shortcut icon">
     <title>Shopper</title>
 </head>
 <body class="container-fluid">
@@ -17,18 +17,18 @@
         <span class="bi bi-truck"></span> Free Shipping Worldwide
      </div>
      <div class="brand-dropdown">
-        <label><img src="../public/images/united-states (1).png" width="25px" height="25px"></label>
+        <label><img src="/united-states.png" width="25px" height="25px"></label>
         <select>
           <option value="unitedstates">United States</option>
           <option value="canada">Canada</option>
           <option value="german">German</option>
         </select>
-        <label><img src="../public/images/women shopping.jpg" width="25px" height="25px"></label>
+        <label><img src="/women shopping.jpg" width="25px" height="25px"></label>
            <select>
              <option value="usd">USD</option>
              <option value="eur">EUR</option>
            </select>
-        <label><img src="./images/kidds shopping.jpg" width="25px" height="25px"></label>
+        <label><img src="/kidds shopping.jpg" width="25px" height="25px"></label>
             <select>
               <option value="english">English</option>
               <option value="french">French</option>
@@ -268,7 +268,7 @@
         <div class="menu-bar10a">
             <div class="carda">
                 <div class="card1a">
-                    <img src="../public/images/7-kk-2022white-groofer-white-original-imaggchfhhcq3mnv.webp" width="80px" height="80px">
+                    <img src="/7-kk-2022white-groofer-white-original-imaggchfhhcq3mnv.webp" width="80px" height="80px">
                     <div>
                         <div>Shoes</div>
                         <div>Low top Sneakers</div>
@@ -295,7 +295,7 @@
         <div class="menu-bar10a">
             <div class="carda">
                 <div class="card1a">
-                    <img src="images/girl.png" width="80px" height="80px">
+                    <img src="/girl.png" width="80px" height="80px">
                     <div>
                         <div>Dresses</div>
                         <div>Cotton Print Dresses</div>
@@ -319,7 +319,7 @@
         <div class="menu-bar10a">
             <div class="carda">
                 <div class="card1a">
-                    <img src="./images/printed shirt.jpg" width="80px" height="80px">
+                    <img src="/printed shirt.jpg" width="80px" height="80px">
                     <div>
                         <div>Printed Shirts</div>
                         <div>Over sized Printed Shirts</div>
@@ -343,17 +343,16 @@
         <h3 class="title">@shopper</h3>
         <p class="sub_heading">Appear, dry there darkness they're seas, dry waters.</p>
         <div class="insta_imgs">
-            <img src="./images/product-16.jpg" alt="model1">
-            <img src="./images/watch.jpg" alt="model2">
-            <img src="./images/product-18.jpg" alt="model3">
-            <img src="./images/men.jpg" alt="model4">
-            <img src="./images/girl.jpg" alt="model5">
-            <img src="./images/girl watch.jpg" alt="model6">
+            <img src="/product-16.jpg" alt="model1">
+            <img src="/watch.jpg" alt="model2">
+            <img src="/product-18.jpg" alt="model3">
+            <img src="/men shopping.jpg" alt="model4">
+            <img src="/girl.jpg" alt="model5">
+            <img src="/girl watch.jpg" alt="model6">
           </div>
-        </div>
-    </div>
+        </section>
     <div class="pic">
-        <img src="./images/menu-bar11a.png">
+        <img src="/menu-bar11a.png">
     </div>
         <footer>
             <section class="footer_section">
@@ -404,7 +403,7 @@
                       <a href="#">help@shopper.com</a>
                     </div>
                   </div>
+                </section>
         </footer>
-      </section>
 </body>
 </html>
