--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
         <h3 class="title">@shopper</h3>
         <p class="sub_heading">Appear, dry there darkness they're seas, dry waters.</p>
         <div class="insta_imgs">
-            <img src="/product-16.jpg" alt="model1">
+            <img src="product-16.jpg" alt="model1">
             <img src="/watch.jpg" alt="model2">
             <img src="/product-18.jpg" alt="model3">
             <img src="/men shopping.jpg" alt="model4">
