--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
         <span class="bi bi-truck"></span> Free Shipping Worldwide
      </div>
      <div class="brand-dropdown">
-        <label><img src="/united-states.png" width="25px" height="25px"></label>
+        <label><img src="united-states.png" width="25px" height="25px"></label>
         <select>
           <option value="unitedstates">United States</option>
           <option value="canada">Canada</option>
           <option value="german">German</option>
         </select>
-        <label><img src="/women shopping.jpg" width="25px" height="25px"></label>
+        <label><img src="women shopping.jpg" width="25px" height="25px"></label>
            <select>
              <option value="usd">USD</option>
              <option value="eur">EUR</option>
            </select>
-        <label><img src="/kidds shopping.jpg" width="25px" height="25px"></label>
+        <label><img src="kidds shopping.jpg" width="25px" height="25px"></label>
             <select>
               <option value="english">English</option>
               <option value="french">French</option>
@@ -272,7 +272,7 @@
         <div class="menu-bar10a">
             <div class="carda">
                 <div class="card1a">
-                    <img src="/7-kk-2022white-groofer-white-original-imaggchfhhcq3mnv.webp" width="80px" height="80px">
+                    <img src="7-kk-2022white-groofer-white-original-imaggchfhhcq3mnv.webp" width="80px" height="80px">
                     <div>
                         <div>Shoes</div>
                         <div>Low top Sneakers</div>
@@ -299,7 +299,7 @@
         <div class="menu-bar10a">
             <div class="carda">
                 <div class="card1a">
-                    <img src="/girl.png" width="80px" height="80px">
+                    <img src="girl.png" width="80px" height="80px">
                     <div>
                         <div>Dresses</div>
                         <div>Cotton Print Dresses</div>
@@ -323,7 +323,7 @@
         <div class="menu-bar10a">
             <div class="carda">
                 <div class="card1a">
-                    <img src="/printed shirt.jpg" width="80px" height="80px">
+                    <img src="printed shirt.jpg" width="80px" height="80px">
                     <div>
                         <div>Printed Shirts</div>
                         <div>Over sized Printed Shirts</div>
