--- a/index.html
+++ b/index.html
@@ -348,15 +348,15 @@
         <p class="sub_heading">Appear, dry there darkness they're seas, dry waters.</p>
         <div class="insta_imgs">
             <img src="product-16.jpg" alt="model1">
-            <img src="/watch.jpg" alt="model2">
-            <img src="/product-18.jpg" alt="model3">
-            <img src="/men shopping.jpg" alt="model4">
-            <img src="/girl.jpg" alt="model5">
-            <img src="/girl watch.jpg" alt="model6">
+            <img src="watch.jpg" alt="model2">
+            <img src="product-18.jpg" alt="model3">
+            <img src="men shopping.jpg" alt="model4">
+            <img src="girl.jpg" alt="model5">
+            <img src="girl watch.jpg" alt="model6">
           </div>
         </section>
     <div class="pic">
-        <img src="/menu-bar11a.png">
+        <img src="menu-bar11a.png">
     </div>
         <footer>
             <section class="footer_section">
